--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       </div>
     </nav>
   <main class="main-section">
-    <h1>Control y Automatizacion <br> De Grandes Projectos</h1>
+    <h1>CONTROL Y AUTOMATIZACIÓN <br> DE GRANDES PROYECTOS</h1>
     <h2>Controla Todo Desde La Palma De Tu Mano</h2>
     <a class="primary-button"  href="https://wa.me/523330643398" target="_blank">Cotiza Ahora</a>
   </main>
@@ -184,7 +184,7 @@
      <h2 id="acerca">Que hacemos ?</h2>
   <div  class="about-us-section">
     <div class="left-container">
-        <iframe width="100%" height="400" src="https://www.youtube.com/embed/hH9PC-IHFVQ?si=HMVv-Nx0qLm5scBd" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe title="services" width="100%" height="400" src="https://www.youtube.com/embed/hH9PC-IHFVQ?si=HMVv-Nx0qLm5scBd" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
     <div class="right-container"> 
       <article class="about-us-card">
@@ -234,18 +234,18 @@
   <div class="gallery-container">
     <h2 id="proyectos" class="gallery-title scroll-element">Proyectos</h2>
     <div class="grid-container">
-      <div onclick="openFullScreen(this)" class="grid-item"><img src="img/Rectamgle-01.JPG" alt="Imagen 1"></div>
-      <div onclick="openFullScreen(this)" class="grid-item"><img src="img/Rectangle-02.jpg" alt="Imagen 2"></div>
-      <div onclick="openFullScreen(this)" class="grid-item"><img src="img/Rectangle-10.JPG" alt="Imagen 3"></div>
-      <div onclick="openFullScreen(this)" class="grid-item"><img src="img/Rectangle-04.jpg" alt="Imagen 4"></div>
-      <div onclick="openFullScreen(this)" class="grid-item"><img src="img/Rectangle-06.jpg" alt="Imagen 5"></div>
-      <div onclick="openFullScreen(this)" class="grid-item"><img src="img/Rectangle-05.jpg" alt="Imagen 6"></div>
-      <div onclick="openFullScreen(this)" class="grid-item"><img src="img/Rectangle-07.jpg" alt="Imagen 7"></div>
-      <div onclick="openFullScreen(this)" class="grid-item"><img src="img/Rectangle-08.jpg" alt="Imagen 8"></div>
-      <div onclick="openFullScreen(this)" class="grid-item"><img src="img/Rectangle-09.JPG" alt="Imagen 9"></div>
-      <div onclick="openFullScreen(this)" class="grid-item"><img src="img/Rectangle-03.jpg" alt="Imagen 10"></div>
-      <div onclick="openFullScreen(this)" class="grid-item"><img src="img/Rectangle-11.jpg" alt="Imagen 11"></div>
-      <div onclick="openFullScreen(this)" class="grid-item"><img src="img/Rectangle-12.jpg" alt="Imagen 12"></div>
+      <div onclick="openFullScreen(this)" class="grid-item"><img src="img/Rectamgle-01.webp" alt="Imagen 1"></div>
+      <div onclick="openFullScreen(this)" class="grid-item"><img src="img/Rectangle-02.webp" alt="Imagen 2"></div>
+      <div onclick="openFullScreen(this)" class="grid-item"><img src="img/Rectangle-10.webp" alt="Imagen 3"></div>
+      <div onclick="openFullScreen(this)" class="grid-item"><img src="img/Rectangle-04.webp" alt="Imagen 4"></div>
+      <div onclick="openFullScreen(this)" class="grid-item"><img src="img/Rectangle-06.webp" alt="Imagen 5"></div>
+      <div onclick="openFullScreen(this)" class="grid-item"><img src="img/Rectangle-05.webp" alt="Imagen 6"></div>
+      <div onclick="openFullScreen(this)" class="grid-item"><img src="img/Rectangle-07.webp" alt="Imagen 7"></div>
+      <div onclick="openFullScreen(this)" class="grid-item"><img src="img/Rectangle-08.webp" alt="Imagen 8"></div>
+      <div onclick="openFullScreen(this)" class="grid-item"><img src="img/Rectangle-09.webp" alt="Imagen 9"></div>
+      <div onclick="openFullScreen(this)" class="grid-item"><img src="img/Rectangle-03.webp" alt="Imagen 10"></div>
+      <div onclick="openFullScreen(this)" class="grid-item"><img src="img/Rectangle-11.webp" alt="Imagen 11"></div>
+      <div onclick="openFullScreen(this)" class="grid-item"><img src="img/Rectangle-12.webp" alt="Imagen 12"></div>
     </div>
   </div>
   <div id="fullScreenOverlay" onclick="closeFullScreen()"></div>
